--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="counter-box">
         <h1>counter</h1>
         <h1 class="counter">0</h1>
-        <div id="btns">
+        <div>
             <button type="button" class="btn" id="lowerCountBtn">Lower Count</button>
             <button type="button" class="btn" id="addCountBtn">Add Count</button>
         </div>
